--- a/hugo-site/nginx.conf
+++ b/hugo-site/nginx.conf
@@ -38,41 +38,33 @@ http {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # HTTP server - redirect to HTTPS (enable after SSL setup)
-    # server {
-    #     listen       80;
-    #     listen  [::]:80;
-    #     server_name  yourdomain.com www.yourdomain.com;
-    #
-    #     # Redirect all HTTP to HTTPS
-    #     return 301 https://$server_name$request_uri;
-    # }
-
-    # Main server block
+    # HTTP server - redirect to HTTPS
     server {
         listen       80;
         listen  [::]:80;
-        # Uncomment these for HTTPS (after SSL setup)
-        # listen       443 ssl http2;
-        # listen  [::]:443 ssl http2;
+        server_name  farad.space www.farad.space;
 
-        server_name  localhost;  # Change to your domain: yourdomain.com www.yourdomain.com
+        # Redirect all HTTP to HTTPS
+        return 301 https://$server_name$request_uri;
+    }
 
-        # SSL certificate paths (uncomment after SSL setup)
-        # For Let's Encrypt:
-        # ssl_certificate     /etc/nginx/certs/fullchain.pem;
-        # ssl_certificate_key /etc/nginx/certs/privkey.pem;
-        #
-        # For Cloudflare Origin Certificate:
-        # ssl_certificate     /etc/nginx/certs/cloudflare-origin.pem;
-        # ssl_certificate_key /etc/nginx/certs/cloudflare-origin-key.pem;
+    # Main server block
+    server {
+        listen       443 ssl http2;
+        listen  [::]:443 ssl http2;
 
-        # SSL configuration (uncomment after SSL setup)
-        # ssl_protocols TLSv1.2 TLSv1.3;
-        # ssl_ciphers HIGH:!aNULL:!MD5;
-        # ssl_prefer_server_ciphers on;
-        # ssl_session_cache shared:SSL:10m;
-        # ssl_session_timeout 10m;
+        server_name  farad.space www.farad.space;
+
+        # SSL certificate paths - Cloudflare Origin Certificate
+        ssl_certificate     /etc/nginx/certs/cloudflare-origin.pem;
+        ssl_certificate_key /etc/nginx/certs/cloudflare-origin-key.pem;
+
+        # SSL configuration
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
 
         root   /usr/share/nginx/html;
         index  index.html index.htm;
